--- a/configuration/experiment_runs1.yml
+++ b/configuration/experiment_runs1.yml
@@ -1,212 +1,365 @@
-- dataset: ageconditions
-  model: xgb
-  best_params: {}
-  param_grid:
-    outer_params: &id013
-      hyperopt_evals: 50
-      validation_fraction: 0.15
-      early_stopping_rounds: 10
-      verbose: false
-    n_estimators: &id014
-    - 100
-    - 2000
-    max_bin: &id015
-    - 256
-    - 32
-    tree_method: &id016
-    - auto
-    - hist
-    max_depth: &id017
-    - 4
-    - 10
-    learning_rate: &id018
-    - 0.1
-    - 0.33
-    subsample: &id019
-    - 0.7
-    - 1.0
-    colsample_bytree: &id020
-    - 0.5
-    - 1.0
-    min_child_weight: &id021
-    - 1
-    - 10
-    alpha: &id022
-    - 0.0
-    - 5.0
-    gamma: &id023
-    - 0.0
-    - 5.0
-    lambda: &id024
-    - 0.0
-    - 5.0
-- dataset: adult
-  model: xgb
+- dataset: titanic
+  model: autoint
   best_params: {}
   param_grid:
     outer_params: &id001
       hyperopt_evals: 50
-      validation_fraction: 0.15
-      early_stopping_rounds: 10
-      verbose: false
-    n_estimators: &id002
-    - 100
-    - 1500
-    max_bin: &id003
-    - 256
+      auto_lr_find: true
+      precision: 16
+      max_epochs: 1000
+      val_size: 0.15
+      early_stopping_patience: 5
+    batch_size: &id002
     - 32
-    tree_method: &id004
-    - auto
-    - hist
-    max_depth: &id005
-    - 4
-    - 10
-    learning_rate: &id006
+    - 64
+    - 128
+    - 256
+    attn_embed_dim_multiplier: &id003
+    - 2
+    - 16
+    num_heads: &id004
+    - 2
+    - 8
+    num_attn_blocks: &id005
+    - 2
+    - 6
+    attn_dropouts: &id006
+    - 0.0
+    - 0.3
+    embedding_dim: &id007
+    - 8
+    - 32
+    embedding_initialization: &id008
+    - kaiming_uniform
+    - kaiming_normal
+    embedding_bias: &id009
+    - true
+    - false
+    share_embedding: &id010
+    - true
+    - false
+    share_embedding_strategy: &id011
+    - add
+    - fraction
+    shared_embedding_fraction: &id012
+    - 0.25
     - 0.1
-    - 0.33
-    subsample: &id007
-    - 0.7
-    - 1.0
-    colsample_bytree: &id008
     - 0.5
-    - 1.0
-    min_child_weight: &id009
-    - 1
-    - 10
-    alpha: &id010
+    deep_layers: &id013
+    - true
+    - false
+    layers: &id014
+    - 128-64-32
+    - 128-64-32-16
+    - 256-128-64
+    dropout: &id015
     - 0.0
-    - 5.0
-    gamma: &id011
-    - 0.0
-    - 5.0
-    lambda: &id012
-    - 0.0
-    - 5.0
-- dataset: housing
-  model: xgb
-  best_params: {}
-  param_grid:
-    outer_params: *id001
-    n_estimators: *id002
-    max_bin: *id003
-    tree_method: *id004
-    max_depth: *id005
-    learning_rate: *id006
-    subsample: *id007
-    colsample_bytree: *id008
-    min_child_weight: *id009
-    alpha: *id010
-    gamma: *id011
-    lambda: *id012
+    - 0.3
+    activation: &id016
+    - ReLU
+    - LeakyReLU
+    initialization: &id017
+    - kaiming
+    - xavier
+    attention_pooling: &id018
+    - true
+    - false
+    optimizer_fn: &id019
+      Adam:
+        weight_decay:
+        - 0.0001
+        - 1.0e-05
+      AdamW:
+        weight_decay:
+        - 0.0001
+        - 1.0e-05
+    scheduler_fn: &id020
+      ReduceLROnPlateau:
+        factor:
+        - 0.1
+        - 0.9
+        patience:
+        - 3
+        - 5
+      ExponentialLR:
+        gamma:
+        - 0.9
+        - 0.99
 - dataset: breastcancer
-  model: xgb
-  best_params: {}
-  param_grid:
-    outer_params: *id013
-    n_estimators: *id014
-    max_bin: *id015
-    tree_method: *id016
-    max_depth: *id017
-    learning_rate: *id018
-    subsample: *id019
-    colsample_bytree: *id020
-    min_child_weight: *id021
-    alpha: *id022
-    gamma: *id023
-    lambda: *id024
-- dataset: titanic
-  model: xgb
-  best_params: {}
-  param_grid:
-    outer_params: *id013
-    n_estimators: *id014
-    max_bin: *id015
-    tree_method: *id016
-    max_depth: *id017
-    learning_rate: *id018
-    subsample: *id019
-    colsample_bytree: *id020
-    min_child_weight: *id021
-    alpha: *id022
-    gamma: *id023
-    lambda: *id024
-- dataset: covertype
-  model: xgb
+  model: autoint
   best_params: {}
   param_grid:
     outer_params: *id001
-    n_estimators: *id002
-    max_bin: *id003
-    tree_method: *id004
-    max_depth: *id005
-    learning_rate: *id006
-    subsample: *id007
-    colsample_bytree: *id008
-    min_child_weight: *id009
-    alpha: *id010
-    gamma: *id011
-    lambda: *id012
-- dataset: creditcard
-  model: xgb
-  best_params: {}
-  param_grid:
-    outer_params: *id001
-    n_estimators: *id002
-    max_bin: *id003
-    tree_method: *id004
-    max_depth: *id005
-    learning_rate: *id006
-    subsample: *id007
-    colsample_bytree: *id008
-    min_child_weight: *id009
-    alpha: *id010
-    gamma: *id011
-    lambda: *id012
-- dataset: iris
-  model: xgb
-  best_params: {}
-  param_grid:
-    outer_params: *id013
-    n_estimators: *id014
-    max_bin: *id015
-    tree_method: *id016
-    max_depth: *id017
-    learning_rate: *id018
-    subsample: *id019
-    colsample_bytree: *id020
-    min_child_weight: *id021
-    alpha: *id022
-    gamma: *id023
-    lambda: *id024
+    batch_size: *id002
+    attn_embed_dim_multiplier: *id003
+    num_heads: *id004
+    num_attn_blocks: *id005
+    attn_dropouts: *id006
+    embedding_dim: *id007
+    embedding_initialization: *id008
+    embedding_bias: *id009
+    share_embedding: *id010
+    share_embedding_strategy: *id011
+    shared_embedding_fraction: *id012
+    deep_layers: *id013
+    layers: *id014
+    dropout: *id015
+    activation: *id016
+    initialization: *id017
+    attention_pooling: *id018
+    optimizer_fn: *id019
+    scheduler_fn: *id020
 - dataset: diabetes
-  model: xgb
+  model: autoint
   best_params: {}
   param_grid:
-    outer_params: *id001
-    n_estimators: *id002
-    max_bin: *id003
-    tree_method: *id004
-    max_depth: *id005
-    learning_rate: *id006
-    subsample: *id007
-    colsample_bytree: *id008
-    min_child_weight: *id009
-    alpha: *id010
-    gamma: *id011
-    lambda: *id012
+    outer_params: &id021
+      hyperopt_evals: 50
+      auto_lr_find: true
+      precision: 16
+      max_epochs: 1000
+      val_size: 0.15
+      early_stopping_patience: 5
+    batch_size: &id022
+    - 1024
+    - 2048
+    - 4096
+    attn_embed_dim_multiplier: &id023
+    - 2
+    - 16
+    num_heads: &id024
+    - 2
+    - 8
+    num_attn_blocks: &id025
+    - 2
+    - 6
+    attn_dropouts: &id026
+    - 0.0
+    - 0.3
+    embedding_dim: &id027
+    - 8
+    - 32
+    embedding_initialization: &id028
+    - kaiming_uniform
+    - kaiming_normal
+    embedding_bias: &id029
+    - true
+    - false
+    share_embedding: &id030
+    - true
+    - false
+    share_embedding_strategy: &id031
+    - add
+    - fraction
+    shared_embedding_fraction: &id032
+    - 0.25
+    - 0.1
+    - 0.5
+    deep_layers: &id033
+    - true
+    - false
+    layers: &id034
+    - 128-64-32
+    - 128-64-32-16
+    - 256-128-64
+    dropout: &id035
+    - 0.0
+    - 0.3
+    activation: &id036
+    - ReLU
+    - LeakyReLU
+    initialization: &id037
+    - kaiming
+    - xavier
+    attention_pooling: &id038
+    - true
+    - false
+    optimizer_fn: &id039
+      Adam:
+        weight_decay:
+        - 0.0001
+        - 1.0e-05
+      AdamW:
+        weight_decay:
+        - 0.0001
+        - 1.0e-05
+    scheduler_fn: &id040
+      ReduceLROnPlateau:
+        factor:
+        - 0.1
+        - 0.9
+        patience:
+        - 3
+        - 5
+      ExponentialLR:
+        gamma:
+        - 0.9
+        - 0.99
+- dataset: adult
+  model: autoint
+  best_params: {}
+  param_grid:
+    outer_params: *id021
+    batch_size: *id022
+    attn_embed_dim_multiplier: *id023
+    num_heads: *id024
+    num_attn_blocks: *id025
+    attn_dropouts: *id026
+    embedding_dim: *id027
+    embedding_initialization: *id028
+    embedding_bias: *id029
+    share_embedding: *id030
+    share_embedding_strategy: *id031
+    shared_embedding_fraction: *id032
+    deep_layers: *id033
+    layers: *id034
+    dropout: *id035
+    activation: *id036
+    initialization: *id037
+    attention_pooling: *id038
+    optimizer_fn: *id039
+    scheduler_fn: *id040
+- dataset: housing
+  model: autoint
+  best_params: {}
+  param_grid:
+    outer_params: *id021
+    batch_size: *id022
+    attn_embed_dim_multiplier: *id023
+    num_heads: *id024
+    num_attn_blocks: *id025
+    attn_dropouts: *id026
+    embedding_dim: *id027
+    embedding_initialization: *id028
+    embedding_bias: *id029
+    share_embedding: *id030
+    share_embedding_strategy: *id031
+    shared_embedding_fraction: *id032
+    deep_layers: *id033
+    layers: *id034
+    dropout: *id035
+    activation: *id036
+    initialization: *id037
+    attention_pooling: *id038
+    optimizer_fn: *id039
+    scheduler_fn: *id040
 - dataset: heloc
-  model: xgb
+  model: autoint
+  best_params: {}
+  param_grid:
+    outer_params: *id021
+    batch_size: *id022
+    attn_embed_dim_multiplier: *id023
+    num_heads: *id024
+    num_attn_blocks: *id025
+    attn_dropouts: *id026
+    embedding_dim: *id027
+    embedding_initialization: *id028
+    embedding_bias: *id029
+    share_embedding: *id030
+    share_embedding_strategy: *id031
+    shared_embedding_fraction: *id032
+    deep_layers: *id033
+    layers: *id034
+    dropout: *id035
+    activation: *id036
+    initialization: *id037
+    attention_pooling: *id038
+    optimizer_fn: *id039
+    scheduler_fn: *id040
+- dataset: ageconditions
+  model: autoint
   best_params: {}
   param_grid:
     outer_params: *id001
-    n_estimators: *id002
-    max_bin: *id003
-    tree_method: *id004
-    max_depth: *id005
-    learning_rate: *id006
-    subsample: *id007
-    colsample_bytree: *id008
-    min_child_weight: *id009
-    alpha: *id010
-    gamma: *id011
-    lambda: *id012
+    batch_size: *id002
+    attn_embed_dim_multiplier: *id003
+    num_heads: *id004
+    num_attn_blocks: *id005
+    attn_dropouts: *id006
+    embedding_dim: *id007
+    embedding_initialization: *id008
+    embedding_bias: *id009
+    share_embedding: *id010
+    share_embedding_strategy: *id011
+    shared_embedding_fraction: *id012
+    deep_layers: *id013
+    layers: *id014
+    dropout: *id015
+    activation: *id016
+    initialization: *id017
+    attention_pooling: *id018
+    optimizer_fn: *id019
+    scheduler_fn: *id020
+- dataset: iris
+  model: autoint
+  best_params: {}
+  param_grid:
+    outer_params: *id001
+    batch_size: *id002
+    attn_embed_dim_multiplier: *id003
+    num_heads: *id004
+    num_attn_blocks: *id005
+    attn_dropouts: *id006
+    embedding_dim: *id007
+    embedding_initialization: *id008
+    embedding_bias: *id009
+    share_embedding: *id010
+    share_embedding_strategy: *id011
+    shared_embedding_fraction: *id012
+    deep_layers: *id013
+    layers: *id014
+    dropout: *id015
+    activation: *id016
+    initialization: *id017
+    attention_pooling: *id018
+    optimizer_fn: *id019
+    scheduler_fn: *id020
+- dataset: creditcard
+  model: autoint
+  best_params: {}
+  param_grid:
+    outer_params: *id021
+    batch_size: *id022
+    attn_embed_dim_multiplier: *id023
+    num_heads: *id024
+    num_attn_blocks: *id025
+    attn_dropouts: *id026
+    embedding_dim: *id027
+    embedding_initialization: *id028
+    embedding_bias: *id029
+    share_embedding: *id030
+    share_embedding_strategy: *id031
+    shared_embedding_fraction: *id032
+    deep_layers: *id033
+    layers: *id034
+    dropout: *id035
+    activation: *id036
+    initialization: *id037
+    attention_pooling: *id038
+    optimizer_fn: *id039
+    scheduler_fn: *id040
+- dataset: covertype
+  model: autoint
+  best_params: {}
+  param_grid:
+    outer_params: *id021
+    batch_size: *id022
+    attn_embed_dim_multiplier: *id023
+    num_heads: *id024
+    num_attn_blocks: *id025
+    attn_dropouts: *id026
+    embedding_dim: *id027
+    embedding_initialization: *id028
+    embedding_bias: *id029
+    share_embedding: *id030
+    share_embedding_strategy: *id031
+    shared_embedding_fraction: *id032
+    deep_layers: *id033
+    layers: *id034
+    dropout: *id035
+    activation: *id036
+    initialization: *id037
+    attention_pooling: *id038
+    optimizer_fn: *id039
+    scheduler_fn: *id040
