--- a/configuration/experiment_runs2.yml
+++ b/configuration/experiment_runs2.yml
@@ -1,4 +1,4 @@
-- dataset: housing
+- dataset: creditcard
   model: categoryembedding
   best_params: {}
   param_grid:
@@ -8,7 +8,7 @@
       precision: 16
       max_epochs: 1000
       val_size: 0.15
-      early_stopping_patience: 5
+      early_stopping_patience: 8
     batch_size: &id002
     - 1024
     - 2048
@@ -51,113 +51,7 @@
         gamma:
         - 0.9
         - 0.99
-- dataset: heloc
-  model: categoryembedding
-  best_params: {}
-  param_grid:
-    outer_params: *id001
-    batch_size: *id002
-    layers: *id003
-    activation: *id004
-    initialization: *id005
-    dropout: *id006
-    embedding_dropout: *id007
-    optimizer_fn: *id008
-    scheduler_fn: *id009
-- dataset: iris
-  model: categoryembedding
-  best_params: {}
-  param_grid:
-    outer_params: &id010
-      hyperopt_evals: 50
-      auto_lr_find: true
-      precision: 16
-      max_epochs: 1000
-      val_size: 0.15
-      early_stopping_patience: 5
-    batch_size: &id011
-    - 32
-    - 64
-    - 128
-    - 256
-    layers: &id012
-    - 128-64-32
-    - 128-64-32-16
-    - 256-128-64
-    activation: &id013
-    - ReLU
-    - LeakyReLU
-    - Tanh
-    initialization: &id014
-    - kaiming
-    - xavier
-    dropout: &id015
-    - 0.0
-    - 0.3
-    embedding_dropout: &id016
-    - 0.0
-    - 0.3
-    optimizer_fn: &id017
-      Adam:
-        weight_decay:
-        - 0.0001
-        - 1.0e-05
-      AdamW:
-        weight_decay:
-        - 0.0001
-        - 1.0e-05
-    scheduler_fn: &id018
-      ReduceLROnPlateau:
-        factor:
-        - 0.1
-        - 0.9
-        patience:
-        - 3
-        - 5
-      ExponentialLR:
-        gamma:
-        - 0.9
-        - 0.99
-- dataset: breastcancer
-  model: categoryembedding
-  best_params: {}
-  param_grid:
-    outer_params: *id010
-    batch_size: *id011
-    layers: *id012
-    activation: *id013
-    initialization: *id014
-    dropout: *id015
-    embedding_dropout: *id016
-    optimizer_fn: *id017
-    scheduler_fn: *id018
-- dataset: titanic
-  model: categoryembedding
-  best_params: {}
-  param_grid:
-    outer_params: *id010
-    batch_size: *id011
-    layers: *id012
-    activation: *id013
-    initialization: *id014
-    dropout: *id015
-    embedding_dropout: *id016
-    optimizer_fn: *id017
-    scheduler_fn: *id018
 - dataset: adult
-  model: categoryembedding
-  best_params: {}
-  param_grid:
-    outer_params: *id001
-    batch_size: *id002
-    layers: *id003
-    activation: *id004
-    initialization: *id005
-    dropout: *id006
-    embedding_dropout: *id007
-    optimizer_fn: *id008
-    scheduler_fn: *id009
-- dataset: diabetes
   model: categoryembedding
   best_params: {}
   param_grid:
@@ -187,16 +81,57 @@
   model: categoryembedding
   best_params: {}
   param_grid:
-    outer_params: *id010
-    batch_size: *id011
-    layers: *id012
-    activation: *id013
-    initialization: *id014
-    dropout: *id015
-    embedding_dropout: *id016
-    optimizer_fn: *id017
-    scheduler_fn: *id018
-- dataset: creditcard
+    outer_params:
+      hyperopt_evals: 50
+      auto_lr_find: true
+      precision: 16
+      max_epochs: 1000
+      val_size: 0.15
+      early_stopping_patience: 10
+    batch_size:
+    - 32
+    - 64
+    - 128
+    - 256
+    layers:
+    - 128-64-32
+    - 128-64-32-16
+    - 256-128-64
+    activation:
+    - ReLU
+    - LeakyReLU
+    - Tanh
+    initialization:
+    - kaiming
+    - xavier
+    dropout:
+    - 0.0
+    - 0.3
+    embedding_dropout:
+    - 0.0
+    - 0.3
+    optimizer_fn:
+      Adam:
+        weight_decay:
+        - 0.0001
+        - 1.0e-05
+      AdamW:
+        weight_decay:
+        - 0.0001
+        - 1.0e-05
+    scheduler_fn:
+      ReduceLROnPlateau:
+        factor:
+        - 0.1
+        - 0.9
+        patience:
+        - 3
+        - 5
+      ExponentialLR:
+        gamma:
+        - 0.9
+        - 0.99
+- dataset: diabetes
   model: categoryembedding
   best_params: {}
   param_grid:
