--- a/configuration/experiment_runs1.yml
+++ b/configuration/experiment_runs1.yml
@@ -1,70 +1,135 @@
 - dataset: iris
-  model: autoint
+  model: mlp
   best_params: {}
   param_grid:
     outer_params: &id001
+      cv_iterations: 10
+      early_stopping: true
+      cv_size: 5
+      validation_fraction: 0.15
+      hyperopt_evals: 50
+      n_iter_no_change: 50
+      max_iter: 1000
+    hidden_layer_sizes: &id002
+    - - 64
+      - 32
+      - 16
+    - - 256
+      - 128
+      - 64
+      - 32
+    - - 128
+      - 64
+      - 32
+      - 16
+    activation: &id003
+    - relu
+    - tanh
+    - logistic
+    solver: &id004
+    - adam
+    - lbfgs
+    alpha: &id005
+    - 0.0001
+    - 0.001
+    - 0.01
+    learning_rate_init: &id006
+    - 0.0001
+    - 0.01
+    - 0.1
+    beta_1: &id007
+    - 0.99
+    - 0.8
+    beta_2: &id008
+    - 0.999
+    - 0.9
+    batch_size: &id009
+    - 32
+    - 64
+    - 128
+    - 256
+- dataset: titanic
+  model: mlp
+  best_params: {}
+  param_grid:
+    outer_params: *id001
+    hidden_layer_sizes: *id002
+    activation: *id003
+    solver: *id004
+    alpha: *id005
+    learning_rate_init: *id006
+    beta_1: *id007
+    beta_2: *id008
+    batch_size: *id009
+- dataset: breastcancer
+  model: mlp
+  best_params: {}
+  param_grid:
+    outer_params: *id001
+    hidden_layer_sizes: *id002
+    activation: *id003
+    solver: *id004
+    alpha: *id005
+    learning_rate_init: *id006
+    beta_1: *id007
+    beta_2: *id008
+    batch_size: *id009
+- dataset: ageconditions
+  model: mlp
+  best_params: {}
+  param_grid:
+    outer_params: *id001
+    hidden_layer_sizes: *id002
+    activation: *id003
+    solver: *id004
+    alpha: *id005
+    learning_rate_init: *id006
+    beta_1: *id007
+    beta_2: *id008
+    batch_size: *id009
+- dataset: iris
+  model: tabnet
+  best_params: {}
+  param_grid:
+    outer_params: &id010
       hyperopt_evals: 50
       auto_lr_find: true
       precision: 16
       max_epochs: 1000
       val_size: 0.15
       early_stopping_patience: 10
-    batch_size: &id002
+    virtual_batch_size_ratio: &id011
+    - 0.125
+    - 0.25
+    - 0.5
+    - 1.0
+    batch_size: &id012
     - 32
     - 64
     - 128
     - 256
-    attn_embed_dim_multiplier: &id003
-    - 2
-    - 16
-    num_heads: &id004
-    - 2
-    - 8
-    num_attn_blocks: &id005
-    - 2
+    weights: &id013
+    - 0
+    - 1
+    mask_type: &id014
+    - sparsemax
+    - entmax
+    n_d: &id015
     - 6
-    attn_dropouts: &id006
-    - 0.0
-    - 0.3
-    embedding_dim: &id007
-    - 8
     - 32
-    embedding_initialization: &id008
-    - kaiming_uniform
-    - kaiming_normal
-    embedding_bias: &id009
-    - true
-    - false
-    share_embedding: &id010
-    - true
-    - false
-    share_embedding_strategy: &id011
-    - add
-    - fraction
-    shared_embedding_fraction: &id012
-    - 0.25
-    - 0.1
-    - 0.5
-    deep_layers: &id013
-    - true
-    - false
-    layers: &id014
-    - 128-64-32
-    - 128-64-32-16
-    - 256-128-64
-    dropout: &id015
-    - 0.0
-    - 0.3
-    activation: &id016
-    - ReLU
-    - LeakyReLU
-    initialization: &id017
-    - kaiming
-    - xavier
-    attention_pooling: &id018
-    - true
-    - false
-    optimizer_fn: &id019
+    n_steps: &id016
+    - 1
+    - 6
+    gamma: &id017
+    - 1.0
+    - 2.0
+    n_independent: &id018
+    - 1
+    - 3
+    n_shared: &id019
+    - 1
+    - 3
+    optimizer_fn: &id020
       Adam:
         weight_decay:
         - 0.0001
@@ -73,7 +138,7 @@
         weight_decay:
         - 0.0001
         - 1.0e-05
-    scheduler_fn: &id020
+    scheduler_fn: &id021
       ReduceLROnPlateau:
         factor:
         - 0.1
@@ -85,209 +150,124 @@
         gamma:
         - 0.9
         - 0.99
-- dataset: creditcard
-  model: autoint
+- dataset: titanic
+  model: tabnet
   best_params: {}
   param_grid:
-    outer_params: &id021
-      hyperopt_evals: 50
-      auto_lr_find: true
-      precision: 16
-      max_epochs: 1000
-      val_size: 0.15
-      early_stopping_patience: 8
-    batch_size: &id022
-    - 1024
-    - 2048
-    - 4096
-    attn_embed_dim_multiplier: &id023
-    - 2
-    - 16
-    num_heads: &id024
-    - 2
-    - 8
-    num_attn_blocks: &id025
-    - 2
-    - 6
-    attn_dropouts: &id026
-    - 0.0
-    - 0.3
-    embedding_dim: &id027
-    - 8
-    - 32
-    embedding_initialization: &id028
-    - kaiming_uniform
-    - kaiming_normal
-    embedding_bias: &id029
-    - true
-    - false
-    share_embedding: &id030
-    - true
-    - false
-    share_embedding_strategy: &id031
-    - add
-    - fraction
-    shared_embedding_fraction: &id032
-    - 0.25
-    - 0.1
-    - 0.5
-    deep_layers: &id033
-    - true
-    - false
-    layers: &id034
-    - 128-64-32
-    - 128-64-32-16
-    - 256-128-64
-    dropout: &id035
-    - 0.0
-    - 0.3
-    activation: &id036
-    - ReLU
-    - LeakyReLU
-    initialization: &id037
-    - kaiming
-    - xavier
-    attention_pooling: &id038
-    - true
-    - false
-    optimizer_fn: &id039
-      Adam:
-        weight_decay:
-        - 0.0001
-        - 1.0e-05
-      AdamW:
-        weight_decay:
-        - 0.0001
-        - 1.0e-05
-    scheduler_fn: &id040
-      ReduceLROnPlateau:
-        factor:
-        - 0.1
-        - 0.9
-        patience:
-        - 3
-        - 5
-      ExponentialLR:
-        gamma:
-        - 0.9
-        - 0.99
+    outer_params: *id010
+    virtual_batch_size_ratio: *id011
+    batch_size: *id012
+    weights: *id013
+    mask_type: *id014
+    n_d: *id015
+    n_steps: *id016
+    gamma: *id017
+    n_independent: *id018
+    n_shared: *id019
+    optimizer_fn: *id020
+    scheduler_fn: *id021
+- dataset: breastcancer
+  model: tabnet
+  best_params: {}
+  param_grid:
+    outer_params: *id010
+    virtual_batch_size_ratio: *id011
+    batch_size: *id012
+    weights: *id013
+    mask_type: *id014
+    n_d: *id015
+    n_steps: *id016
+    gamma: *id017
+    n_independent: *id018
+    n_shared: *id019
+    optimizer_fn: *id020
+    scheduler_fn: *id021
 - dataset: ageconditions
-  model: autoint
+  model: tabnet
   best_params: {}
   param_grid:
-    outer_params: *id001
-    batch_size: *id002
-    attn_embed_dim_multiplier: *id003
-    num_heads: *id004
-    num_attn_blocks: *id005
-    attn_dropouts: *id006
-    embedding_dim: *id007
-    embedding_initialization: *id008
-    embedding_bias: *id009
-    share_embedding: *id010
-    share_embedding_strategy: *id011
-    shared_embedding_fraction: *id012
-    deep_layers: *id013
-    layers: *id014
-    dropout: *id015
-    activation: *id016
-    initialization: *id017
-    attention_pooling: *id018
-    optimizer_fn: *id019
-    scheduler_fn: *id020
-- dataset: adult
-  model: autoint
+    outer_params: *id010
+    virtual_batch_size_ratio: *id011
+    batch_size: *id012
+    weights: *id013
+    mask_type: *id014
+    n_d: *id015
+    n_steps: *id016
+    gamma: *id017
+    n_independent: *id018
+    n_shared: *id019
+    optimizer_fn: *id020
+    scheduler_fn: *id021
+- dataset: iris
+  model: resnet
   best_params: {}
   param_grid:
-    outer_params: *id021
-    batch_size: *id022
-    attn_embed_dim_multiplier: *id023
-    num_heads: *id024
-    num_attn_blocks: *id025
-    attn_dropouts: *id026
-    embedding_dim: *id027
-    embedding_initialization: *id028
-    embedding_bias: *id029
-    share_embedding: *id030
-    share_embedding_strategy: *id031
-    shared_embedding_fraction: *id032
-    deep_layers: *id033
-    layers: *id034
-    dropout: *id035
-    activation: *id036
-    initialization: *id037
-    attention_pooling: *id038
-    optimizer_fn: *id039
-    scheduler_fn: *id040
-- dataset: housing
-  model: autoint
+    outer_params: &id022
+      hyperopt_evals: 50
+      max_epochs: 1000
+      early_stopping: true
+      early_stopping_patience: 10
+      validation_fraction: 0.15
+    batch_size: &id023
+    - 32
+    - 64
+    - 128
+    - 256
+    resnet_depth: &id024
+    - resnet18
+    - resnet34
+    - resnet50
+    optimizer_fn: &id025
+      Adam:
+        weight_decay:
+        - 1.0e-05
+        - 0.001
+        learning_rate:
+        - 0.0001
+        - 0.001
+      AdamW:
+        weight_decay:
+        - 1.0e-05
+        - 0.001
+        learning_rate:
+        - 0.0001
+        - 0.001
+    scheduler_fn: &id026
+      ReduceLROnPlateau:
+        factor:
+        - 0.1
+        - 0.9
+        patience:
+        - 3
+        - 5
+      ExponentialLR:
+        gamma:
+        - 0.9
+        - 0.99
+- dataset: titanic
+  model: resnet
   best_params: {}
   param_grid:
-    outer_params: *id021
-    batch_size: *id022
-    attn_embed_dim_multiplier: *id023
-    num_heads: *id024
-    num_attn_blocks: *id025
-    attn_dropouts: *id026
-    embedding_dim: *id027
-    embedding_initialization: *id028
-    embedding_bias: *id029
-    share_embedding: *id030
-    share_embedding_strategy: *id031
-    shared_embedding_fraction: *id032
-    deep_layers: *id033
-    layers: *id034
-    dropout: *id035
-    activation: *id036
-    initialization: *id037
-    attention_pooling: *id038
-    optimizer_fn: *id039
-    scheduler_fn: *id040
-- dataset: heloc
-  model: autoint
+    outer_params: *id022
+    batch_size: *id023
+    resnet_depth: *id024
+    optimizer_fn: *id025
+    scheduler_fn: *id026
+- dataset: breastcancer
+  model: resnet
   best_params: {}
   param_grid:
-    outer_params: *id021
-    batch_size: *id022
-    attn_embed_dim_multiplier: *id023
-    num_heads: *id024
-    num_attn_blocks: *id025
-    attn_dropouts: *id026
-    embedding_dim: *id027
-    embedding_initialization: *id028
-    embedding_bias: *id029
-    share_embedding: *id030
-    share_embedding_strategy: *id031
-    shared_embedding_fraction: *id032
-    deep_layers: *id033
-    layers: *id034
-    dropout: *id035
-    activation: *id036
-    initialization: *id037
-    attention_pooling: *id038
-    optimizer_fn: *id039
-    scheduler_fn: *id040
-- dataset: covertype
-  model: autoint
+    outer_params: *id022
+    batch_size: *id023
+    resnet_depth: *id024
+    optimizer_fn: *id025
+    scheduler_fn: *id026
+- dataset: ageconditions
+  model: resnet
   best_params: {}
   param_grid:
-    outer_params: *id021
-    batch_size: *id022
-    attn_embed_dim_multiplier: *id023
-    num_heads: *id024
-    num_attn_blocks: *id025
-    attn_dropouts: *id026
-    embedding_dim: *id027
-    embedding_initialization: *id028
-    embedding_bias: *id029
-    share_embedding: *id030
-    share_embedding_strategy: *id031
-    shared_embedding_fraction: *id032
-    deep_layers: *id033
-    layers: *id034
-    dropout: *id035
-    activation: *id036
-    initialization: *id037
-    attention_pooling: *id038
-    optimizer_fn: *id039
-    scheduler_fn: *id040
+    outer_params: *id022
+    batch_size: *id023
+    resnet_depth: *id024
+    optimizer_fn: *id025
+    scheduler_fn: *id026
